<resources>
    <string name="app_name">DemoRegister</string>
    <string name="the_boat_kitchen">The Boat Kitchen</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="title_activity_welcome_admin">WelcomeAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="orders">Orders</string>
    <string name="menus">Menus</string>
</resources>